--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,15 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# Typeorm configs
 ormconfig.json
+ormconfig.ts
+
+# Image folders
+/_image/*
+
+# Env configs
+*.env
+
+# Ignore gitkeep
+!/**/.gitkeep
